# tuw_msgs

./: .gitignore  LICENSE  README.md
tuw_airskin_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
tuw_airskin_msgs/msg/: AirskinColors.msg  AirskinInfo.msg  AirskinPressures.msg
tuw_gazebo_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
tuw_gazebo_msgs/msg/: IwsCmd_VRAT_Vec.msg
tuw_geo_msgs/: CMakeLists.txt  package.xml
tuw_geo_msgs/include/tuw_geo_msgs/: geo_json_feature_json.hpp  geo_json_geometry_json.hpp  geo_json_json.hpp  geo_point.hpp  geo_point_json.hpp  geo_pose.hpp  geo_pose_json.hpp
tuw_geo_msgs/msg/: GeoJSON.msg  GeoJSONFeature.msg  GeoJSONGeometry.msg  GeoJSONProperties.msg
tuw_geometry_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
tuw_geometry_msgs/include/tuw_geometry_msgs/: point.hpp  point_json.hpp  pose.hpp  pose_json.hpp  pose_stamped.h  quaternion.hpp  quaternion_json.hpp
tuw_geometry_msgs/msg/: LineSegments.msg  TwistWithOrientation.msg  WeightedPoseWithCovarianceArray.msg
tuw_geometry_msgs/src/: point.cpp  pose.cpp
tuw_geometry_rviz_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_description.xml
tuw_geometry_rviz_plugin/include/LineSegments2D/: LineSegments2DDisplay.h  LineSegments2DVisual.h
tuw_geometry_rviz_plugin/include/PoseWithCovarianceStamped/: .PoseWithCovarianceStampedDisplay.h.kate-swp  PoseWithCovarianceStampedDisplay.h  (+1 more)
tuw_geometry_rviz_plugins/: CMakeLists.txt  package.xml
tuw_graph_msgs/: CMakeLists.txt  package.xml
tuw_graph_msgs/msg/: Edge.msg  Graph.msg  Node.msg  State.msg
tuw_graph_msgs/srv/: GetGraph.srv
tuw_graph_msgs/test/: test_graph.cpp
tuw_iws_msgs/: CMakeLists.txt  package.xml
tuw_iws_msgs/msg/: JointsIWS.msg
tuw_local_controller_msgs/: CMakeLists.txt  package.xml
tuw_local_controller_msgs/action/: ExecutePath.action
tuw_map_msgs/: package.xml
tuw_map_msgs/msg/: map.msg  objects.msg
tuw_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
tuw_msgs/include/tuw_msgs/: edge.hpp  graph.hpp  node.hpp  point.hpp  pose.hpp  quaternion.hpp  serialize.hpp  utils.hpp
tuw_msgs/res/: graph.txt
tuw_msgs/src/: edge.cpp  graph.cpp  node.cpp  point.cpp  pose.cpp  quaternion.cpp  serialize.cpp  utils.cpp
tuw_msgs/src/examples/: main_graph.cpp  main_json.cpp  main_serialize.cpp
tuw_msgs/test/: test_graph_json.cpp  test_graph_msgs.cpp  test_serialize.cpp  test_std_msgs.cpp  test_utils.cpp  unit_msgs.cpp
tuw_multi_robot_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
tuw_multi_robot_msgs/action/: FollowRoute.action
tuw_multi_robot_msgs/msg/: BehaviourProfile.msg  Good.msg  GoodPosition.msg  Goods.msg  Graph.msg  LocalControllerProgress.msg  Order.msg  OrderArray.msg  OrderPosition.msg  PathSegment.msg  Pickup.msg  PlannerStatus.msg  ProgressPath.msg  ProgressRoute.msg  RobotGoals.msg  RobotGoalsArray.msg  RobotInfo.msg  Route.msg  RoutePrecondition.msg  RouteProgress.msg  RouteSegment.msg  RouteTable.msg  RouterStatus.msg  Station.msg  StationArray.msg  Vertex.msg
tuw_multi_robot_msgs/srv/: StationManagerControlProtocol.srv  StationManagerStationProtocol.srv
tuw_nav_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
tuw_nav_msgs/msg/: BaseConstr.msg  ControllerState.msg  DiffDriveCmdVWVec.msg  DiffDriveCmd_VW_Vec.msg  IwsCmdVRAT.msg  IwsCmdVRATVec.msg  IwsCmdVWWTVec.msg  IwsCmd_VRAT_Vec.msg  IwsCmd_VWWT_Vec.msg  Joints.msg  JointsIWS.msg  RouteSegments.msg  Spline.msg
tuw_nav_msgs/src/: path.cpp  point.cpp  pose.cpp  pose_stamped.cpp  route_segment.cpp  route_segments.cpp
tuw_nav_rviz_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_description.xml
tuw_nav_rviz_plugin/include/Path/: PathDisplay.h  PathVisual.h
tuw_nav_rviz_plugin/include/RouteSegments/: RouteSegmentsDisplay.h  RouteSegmentsVisual.h
tuw_nav_rviz_plugin/include/Spline/: SplineDisplay.h  SplineVisual.h
tuw_nav_rviz_plugin/include/spline/: spline_display.h  spline_visual.h
tuw_nav_rviz_plugin/src/Path/: PathDisplay.cpp  PathVisual.cpp
tuw_nav_rviz_plugin/src/RouteSegments/: RouteSegmentsDisplay.cpp  RouteSegmentsVisual.cpp
tuw_nav_rviz_plugin/src/Spline/: SplineDisplay.cpp  SplineVisual.cpp  display.cpp  visual.cpp
tuw_nav_rviz_plugin/src/spline/: spline_display.cpp  spline_visual.cpp
tuw_object_map_msgs/: CMakeLists.txt  package.xml
tuw_object_map_msgs/include/tuw_object_map_msgs/: geo_json_feature_json.hpp  geo_json_geometry_json.hpp  geo_json_json.hpp  geo_point.hpp  geo_point_json.hpp  geo_pose.hpp  geo_pose_json.hpp  object.hpp  object_json.hpp  object_map.hpp  object_map_json.hpp  object_point.hpp  object_point_json.hpp  objects.hpp  objects_json.hpp  value.hpp  value_json.hpp
tuw_object_map_msgs/msg/: GeoJSONGeometry.msg  GeoPoint.msg  GeoPose.msg  Object.msg  ObjectMap.msg  ObjectNew.msg  ObjectPoint.msg
tuw_object_map_msgs/srv/: GetObjectMap.srv  GetObjects.srv  LoadMap.srv  SaveMap.srv
tuw_object_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
tuw_object_msgs/msg/: .ObjectWithCovarianceArray.msg.kate-swp  Cone.msg  ConeDetection.msg  ConeWithCovariance.msg  ConeWithCovarianceArray.msg  Object.msg  ObjectDetection.msg  ObjectStamped.msg  ObjectWithCovarianceArray.msg  ObjectWithCovarianceArrayArray.msg  ObjectWithCovarianceStamped.msg
tuw_object_rviz_plugin/: CMakeLists.txt  package.xml
tuw_spline_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
tuw_std_msgs/: CMakeLists.txt  package.xml
tuw_std_msgs/include/tuw_object_map_msgs/: value_float64.hpp  value_float64_json.hpp
tuw_std_msgs/include/tuw_std_msgs/: parameter.hpp  parameter_float64.hpp  parameter_float64_json.hpp  parameter_json.hpp
tuw_std_msgs/msg/: Parameter.msg  ParameterFloat64.msg
tuw_std_msgs/srv/: GetValueFloat64.srv
tuw_vehicle_msgs/: CMakeLists.txt  package.xml
tuw_vehicle_msgs/msg/: AutonomousState.msg  BatteryState.msg  ChassisState.msg  CmdMpcVec_vphi.msg  ControlState.msg  DiagnosisState.msg  RWDControl.msg  RWDKinCmd.msg  ResState.msg  Track.msg  TrackMarking.msg
tuw_vehicle_msgs/src/: battery_state.cpp
tuw_waypoint_to_spline_msgs/: CMakeLists.txt  package.xml
(+19 files in other folders)
