<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tuw_msgs</name>
  <version>0.0.0</version>
  <description>tuw_msgs meta package with write and read file libs for tuw_msgs</description>
  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tuw_std_msgs</depend>
  <depend>tuw_geometry_msgs</depend>
  <depend>tuw_graph_msgs</depend>
  <depend>tuw_airskin_msgs</depend>
  <depend>tuw_multi_robot_msgs</depend>
  <depend>tuw_nav_msgs</depend>
  <depend>tuw_object_msgs</depend>
  <depend>tuw_object_map_msgs</depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
