<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tuw_multi_robot_msgs</name>
  <version>0.0.15</version>
  <description>The tuw_multi_robot_msgs package contains messages for sending graph, route and sync data over topics.</description>

  <maintainer email="benjamin.binder@tuwien.ac.at">Benjamin Binder</maintainer>
  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>


  <license>BSD</license>


  <author email="benjamin.binder@tuwien.ac.at">Benjamin Binder</author>
  <author email="eugen.kaltengger@gmail.com">Eugen Kaltenegger</author>
  <author email="markus.bader@tuwien.ac.at">Markus Bader</author>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
