<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tuw_std_msgs</name>
  <version>0.2.1</version>
  <description>The tuw_std_msgs package</description>

  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>


  <license>BSD</license>

  <author email="markus.bader@tuwien.ac.at">Markus Bader</author>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
